# citylink-product-description-generator

./: .env.example  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
apps/backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
apps/backend/core/auth/: update_creds.py
apps/backend/core/model/: client.py
apps/backend/core/model/prompt/__base/: template.py
apps/backend/core/model/prompts/__base/: template.py
apps/backend/core/model/prompts/marketing/: __init__.py  marketing.yml  template.py
apps/backend/utils/: logs.py
frontend/: .env  Dockerfile  docker-compose.yml  package-lock.json  package.json  vite.config.ts
frontend/mock-server/: server.ts
frontend/src/: App.tsx  env.ts  main.tsx
frontend/src/api/: const.ts  interactions.ts
frontend/src/api/hooks/: index.ts  useAddProduct.tsx  useRegenerateProduct.tsx  useSearchProduct.tsx  useSendProductFields.tsx  useSendProductInfo.tsx
frontend/src/context/: AppContext.tsx
frontend/src/pages/: index.ts
frontend/src/pages/AddProductPage/: AddProductPage.tsx  const.ts
frontend/src/pages/FillProductCardDetails/: FillProductCardDetails.tsx
frontend/src/pages/FillProductDescriptionPage/: FillProductDescriptionPage.tsx
frontend/src/pages/FoundProductsPage/: FoundProductsPage.tsx
frontend/src/pages/ProductCardPage/: ProductCardPage.module.scss  ProductCardPage.tsx
frontend/src/pages/SearchProductPage/: SearchProductPage.tsx
frontend/src/pages/SimilarProductsPage/: SimilarProductsPage.tsx
frontend/src/shared/ui/: index.ts
(+7 files in other folders)
