[tool.poetry]
name = "citylink-product-description-generator"
version = "0.1.0"
description = ""
authors = ["MulhamShaheen <mulhamshaheen.ms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.3"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
